fix(tag): set vertical alignment (#7927)
* fix(tag): set vertical alignment

* docs(Tag): add test story

--- a/packages/components/src/components/tag/_tag.scss
+++ b/packages/components/src/components/tag/_tag.scss
@@ -36,6 +36,7 @@
     min-height: rem(24px);
     margin: $carbon--spacing-02;
     padding: $carbon--spacing-02 $carbon--spacing-03;
+    vertical-align: middle;
     word-break: break-word;
     border-radius: rem(15px);
     cursor: default;
